# Tetris

./: CMakeLists.txt  README.md
src/: funkce.c  menu.c  pohyb.c  tetris.c  tetris.h  vykresli.c
